--- a/package.json
+++ b/package.json
@@ -23,14 +23,15 @@
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
-    "formik": "^1.3.0",
+    "formik": "^1.3.1",
     "fs-extra": "3.0.1",
+    "fuzzysearch": "^1.0.3",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
-    "mobx": "^5.1.2",
+    "mobx": "^5.5.0",
     "mobx-react": "^5.2.8",
     "mobx-react-devtools": "^6.0.3",
-    "mobx-state-tree": "^3.4.0",
+    "mobx-state-tree": "^3.5.0",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
